--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>سقيا الخير</title>
   </head>
+  <script src="https://unpkg.com/prop-types@15.8.1/prop-types.min.js"></script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
